Added new configurations

--- a/package.json
+++ b/package.json
@@ -4,25 +4,33 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.4.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
+    "numeral": "^2.0.6",
+    "prettier": "^1.19.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
+    "react-modal": "^3.11.1",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "react-spinners": "^0.5.4",
+    "react-spinners": "^0.8.0",
     "react-toastify": "^5.2.1",
+    "react-translate": "^7.0.1",
     "reactstrap": "^8.0.0",
     "recharts": "^1.6.0",
     "redux": "^4.0.1",
     "redux-form": "^8.2.1",
     "redux-form-input-masks": "^2.0.1",
     "redux-saga": "^1.0.2",
-    "styled-components": "^4.2.0"
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
